WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132665
[iOS] Acclerated overflow-scrolling broken in WK1
https://bugs.webkit.org/show_bug.cgi?id=132665
Summary
[iOS] Acclerated overflow-scrolling broken in WK1
Simon Fraser (smfr)
Reported
2014-05-07 14:39:06 PDT
[iOS] Acclerated overflow-scrolling broken in WK1
Attachments
Patch
(4.96 KB, patch)
2014-05-07 14:40 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-07 14:40:08 PDT
Created
attachment 231023
[details]
Patch
Tim Horton
Comment 2
2014-05-07 14:41:49 PDT
Comment on
attachment 231023
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231023&action=review
> Source/WebCore/platform/graphics/ca/mac/PlatformCALayerMac.mm:771 > + // Custom layers can get wraped in UIViews (which clobbers the layer delegate),
*wrapped*
Simon Fraser (smfr)
Comment 3
2014-05-07 14:50:02 PDT
https://trac.webkit.org/r168440
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug