[iOS] Acclerated overflow-scrolling broken in WK1 https://bugs.webkit.org/show_bug.cgi?id=132665 <rdar://problem/16842909>

Reviewed by Tim Horton.

r168301 added a CALayer delegate to disable implicit animations,
but for some layers we wrap them in UIViews (which are themselves
layer delegates), so bad things happened.

Fix by falling back to setting the null actions dictionary for
layers with custom scrolling behavior.

* platform/graphics/GraphicsLayer.h:
* platform/graphics/ca/mac/PlatformCALayerMac.h:
* platform/graphics/ca/mac/PlatformCALayerMac.mm:
(PlatformCALayerMac::updateCustomBehavior):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateScrollingLayers):

Canonical link: https://commits.webkit.org/150706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168440 268f45cc-cd09-0410-ab3c-d52691b4dbfc